~~~~~~~~~~~~~~~~~~~
version 1.5.4
~~~~~~~~~~~~~~~~~~~

* added write out if guess is correct but account disabled

~~~~~~~~~~~~~~~~~~~
version 1.5.3
~~~~~~~~~~~~~~~~~~~

* added a fix if a blank password was used, it will try that instead of erroring out

~~~~~~~~~~~~~~~~~~~
version 1.5.2
~~~~~~~~~~~~~~~~~~~

* password expired found

~~~~~~~~~~~~~~~~~~~
version 1.5.1
~~~~~~~~~~~~~~~~~~~

* fixed twitter handle

~~~~~~~~~~~~~~~~~~~
version 1.5
~~~~~~~~~~~~~~~~~~~

* Added better handling around when zero status is returned (null) for user accounts
* Added fail message for when enumdom users wouldn't work right
* Used reindent to fix spacing issues
* Added description on the password attempt when lc username is used

~~~~~~~~~~~~~~~~~~~
version 1.4
~~~~~~~~~~~~~~~~~~~

* Added better detection on brute force account lockouts
* Added enumdomusers as a fallback in case rid enumeration fails on Win2k8/2k12 servers.

~~~~~~~~~~~~~~~~~~~
version 1.3
~~~~~~~~~~~~~~~~~~~

* Added better handling if domain name isn't specified in the userlist and lc username or uc username is used, it now works properly

~~~~~~~~~~~~~~~~~~~
version 1.2
~~~~~~~~~~~~~~~~~~~

* Added flag status for code received NT_STATUS_PASSWORD_MUST_CHANGE will detect password needs changed and log it
* Added flag status code for NT_STATUS_BAD_NETWORK_NAME 

~~~~~~~~~~~~~~~~~~~
version 1.1
~~~~~~~~~~~~~~~~~~~

* Fixed an issue when lc username was used and would not be a split on \\ domain name would cause ridenum to error out
* Added NT_STATUS_LOGON_TYPE_NOT_GRANTED for exceptions handling for ridenum

~~~~~~~~~~~~~~~~~~~
version 1.0
~~~~~~~~~~~~~~~~~~~

* fixed an error message when NT_STATUS_ACCOUNT_DISABLED was thrown

~~~~~~~~~~~~~~~~~~~
version 0.9
~~~~~~~~~~~~~~~~~~~

* added better handling if NT_STATUS_ACCESS_DENIED is received post lsaquery
* added base domain response triggers for lsaquery results if successful
* fixed a counter issue when access denied from the server was returned
